--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "build/index.js",
   "types": "build/types/index.d.ts",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js",
+    "start": "webpack serve --config webpack.config.js --mode development",
     "build": "webpack && tsc",
     "test": "jest --silent",
     "coverage": "npm run test -- --coverage",
@@ -24,10 +24,15 @@
   },
   "homepage": "https://github.com/monobyte/ui-interview-exercise#readme",
   "dependencies": {
-    "rxjs": "^7.5.5",
     "@babel/runtime": "^7.17.8",
+    "@heroicons/react": "^1.0.6",
+    "classnames": "^2.3.1",
     "lodash-es": "^4.17.21",
-    "tslib": "^2.3.1"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "rxjs": "^7.5.5",
+    "tslib": "^2.3.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
@@ -38,8 +43,13 @@
     "@babel/plugin-transform-typescript": "^7.16.8",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/jest": "^27.4.1",
     "@types/lodash-es": "^4.17.6",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.33.0",
     "babel-eslint": "^10.1.0",
@@ -55,6 +65,7 @@
     "regenerator-runtime": "^0.13.9",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.1",
+    "ts-loader": "^9.3.0",
     "typescript": "^4.6.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.45.1",
